# TSA_Software_Development

./: README.md  db.sqlite3  manage.py  pyproject.toml
CyRanch_Connect/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
CyRanch_Connect/migrations/: 0001_initial.py  0002_student_user.py  0003_alter_student_user.py  0004_prize_description_prize_name_prize_price_prize_slug_and_more.py  0005_alter_student_user.py  0006_student_grade.py  0007_alter_student_options.py  0008_alter_student_grade.py  0009_event_slug.py  0010_remove_prize_slug_prize_event_id.py  0011_rename_slug_event_event_id.py  0012_event_token.py  0013_alter_event_token.py  0014_remove_student_events_event_attendees.py  0015_alter_event_attendees.py  (+2 more)
FBLA_CodingProgramming_2023/: asgi.py  settings.py  urls.py  wsgi.py
backup/: default-Siddharth-Legion-2023-03-21-234437.dump  default-Siddharth-Legion-2023-03-22-014026.dump  default-Siddharth-Legion-2023-03-22-235636.dump  default-Siddharth-Legion-2023-03-23-124212.dump  default-Siddharth-Legion-2023-03-23-133952.dump  default-Siddharth-Legion-2023-03-23-134911.dump  default-Siddharth-Legion-2023-03-23-135951.dump  default-Siddharth-Legion-2023-03-23-143759.dump  default-SiddharthLegion-2023-01-19-004643.dump  default-SiddharthLegion-2023-01-20-232316.dump  default-SiddharthLegion-2023-01-20-233400.dump  default-SiddharthLegion-2023-01-21-000105.dump  default-SiddharthLegion-2023-01-21-064909.dump  default-SiddharthLegion-2023-01-21-065857.dump  default-SiddharthLegion-2023-01-21-120313.dump
templates/: base.html
(+13 files in other folders)
